--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 'Work Sans';
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
