--- a/src/pages/controleVeiculos/index.scss
+++ b/src/pages/controleVeiculos/index.scss
@@ -1,1 +1,175 @@
-    
+.pagina-clientes
+{
+    display: flex;
+    flex-direction: row;
+
+    main
+    {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        background-color: #F5F6FA;
+    }
+
+    .sec-main
+    {
+        display: flex;
+        flex-direction: column;
+        padding: 70px 50px;
+
+        > h1
+        {
+            font-size: 14px;
+            font-weight: 700;
+            color: #CF5B00;
+            text-transform: uppercase;
+        }
+
+        > h2
+        {
+            font-size: 32px;
+            font-weight: 700;
+            margin-bottom: 45px;
+        }
+
+        .lista-clientes
+        {
+            display: flex;
+            flex-direction: column;
+            
+            padding: 45px 36px;
+            background-color: #FFF;
+            box-shadow: 0 0 8px 0 #7A7A7A40;
+
+            > h2
+            {
+                font-size: 24px;
+                font-weight: 600;
+                margin-bottom: 11px;
+            }
+
+            .input
+            {
+                font-family: 'Inter';
+
+                max-width: 320px;                
+                
+                position: relative;
+                display: flex;
+                flex-direction: column;
+
+                margin-bottom: 40px;
+                padding: 10px 8px;
+                border: 2px solid #C7C7C7;
+                border-radius: 4px;
+
+                min-width: 323px;
+
+                input
+                {
+                    font-size: 16px;
+                    font-weight: 400;
+                    border: none;
+                }
+
+                input:focus-visible
+                {
+                    outline: none;
+                }
+
+                label
+                {
+                    font-size: 10px;
+                    font-weight: 800;
+                    color: #747474;
+                    margin-bottom: 3px;
+                }
+
+                img
+                {
+                    position: absolute;
+                    width: 24px;
+                    height: 24px;
+                    right: 12px;
+                    top: 14px;
+                }
+            }
+
+            table
+            {
+                text-align: left;
+                
+                tbody
+                {
+                    tr
+                    {
+                        margin-bottom: 5px;
+                    }
+
+                    td:first-child
+                    {
+                        border-top-left-radius: 5px;
+                        border-bottom-left-radius: 5px;
+                        border: 1px solid #D4D4D4;
+                        border-right: none;
+                    }
+
+                    td:last-child
+                    {
+                        padding-right: 70px;
+
+                        border-top-right-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                        border: 1px solid #D4D4D4;
+                        border-left: none;
+
+                        position: relative;
+                    }
+
+                    td
+                    {
+                        border-top: 1px solid #D4D4D4;
+                        border-bottom: 1px solid #D4D4D4;
+                    }
+
+                    div
+                    {
+                        position: absolute;
+                        right: 16px;
+                        top: 5px;
+
+                        button
+                        {
+                            border: none;
+                            background: none;
+                            cursor: pointer;
+                        }
+
+                        img
+                        {
+                            width: 24px;
+                            height: 24px;
+                        }
+                    }
+                }
+
+                th
+                {
+                    color: #A8A8A8;
+                }
+
+                td
+                {
+                    color: #3C4261;
+                    font-size: 14px;
+                    font-weight: 700;
+                }
+
+                th, td
+                {
+                    padding: 8px 29px;
+                }
+            }
+        }
+    }
+}
